# codetraverse

./: .gitignore  MANIFEST.in  README.md  commits_freq.json  commits_output.json  gada_test.py  git_data.json  ind_freq.json  main.py  output.txt  output_function_info.txt  package-lock.json  package.json  path.py  pyproject.toml  requirements.txt  sample_commits.json  setup.py  testing.py  top_lvl_componenets.py
.github/workflows/: npm-publish.yaml  python-tests.yml
adapters/: go_adapter.py  haskell_adapter.py  python_adapter.py  rescript_adapter.py  rust_adapter.py  typescript_adapter.py
base/: component_extractor.py
bridge/: .eslintrc.js  README.md  jest.config.js  package.json  tsconfig.json
bridge/examples/: basic-usage.js
bridge/src/: bridge.ts  index.ts  python-runner.ts  types.ts
codetraverse/: __init__.py  main.py  path.py  requirements.txt
codetraverse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
codetraverse/GADA/: FPalgo.py  gada_bayes.py  gada_traverse.py
codetraverse/adapters/: go_adapter.py  haskell_adapter.py  javascript_adapter.py  purescript_adapter.py  python_adapter.py  rescript_adapter.py  rust_adapter.py  typescript_adapter.py
codetraverse/ast_diff/: AstDifferOrchestrator.py  Detailedchanges.py  TSdiff.py  __init__.py  basefilediff.py  bitbucket.py  differ.py  gitwrapper.py  godiff.py  haskelldiff.py  orchclass.py  purescriptdiff.py  pythondiff.py  resdiffer.py  rustdiff.py
codetraverse/base/: component_extractor.py
codetraverse/extractors/: go_extractor.py  haskell_extractor.py  javascript_extractor.py  purescript_extractor.py  python_extractor.py  rescript_extractor.py  rust_extractor.py  typescript_extractor.py
codetraverse/mcp/: helper.py  server.py  tool_descriptions.toml
codetraverse/registry/: extractor_registry.py
codetraverse/utils/: AstDifferOrchestrator.py  blackbox.py  graph_partitioner.py  networkx_graph.py
codetraverse2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
extractors/: go_extractor.py  haskell_extractor.py  python_extractor.py  rescript_extractor.py  rust_extractor.py  typescript_extractor.py
registry/: extractor_registry.py
sample_code_repo_test/golang/: go.mod  main.go  models.go  types.go  utils.go
sample_code_repo_test/haskell/: Main.hs  Models.hs  Types.hs  Utils.hs
sample_code_repo_test/javascript/: index.js  models.js  types.js  utils.js
scripts/: generate_tests_fdep_graph.py  setup.sh
testing/: testing.py
tests/: README.MD
utils/: networkx_graph.py
(+31 files in other folders)
