[project]
name = "codetraverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.0",
    "graphviz==0.20.3",
    "kiwisolver==1.4.8",
    "lxml==5.4.0",
    "matplotlib==3.10.3",
    "neo4j==5.28.1",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scipy==1.15.3",
    "six==1.17.0",
    "tqdm==4.67.1",
    "tree-sitter",
    "tree-sitter-haskell==0.23.1",
    "tree-sitter-python==0.23.6",
    "tree-sitter-rescript",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tree-sitter = { git = "https://github.com/tree-sitter/py-tree-sitter", rev = "29bfbc0e246d499241ebc587f3688f25bb00a9e1" }
tree-sitter-rescript = { git = "https://github.com/JignyasAnand/tree-sitter-rescript.git" }
